[tool.poetry]
name = "ewallet"
version = "0.1.0"
description = ""
authors = ["Revathy Radhakrishnan <revathy@lanwaresolutions.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
SQLAlchemy = "^2.0.29"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
